update architecture
